# vector-derive

./: vector-derive.cabal
Data/Vector/: Strict.hs
Data/Vector/Unboxed/: Derive.hs  Instances.hs  Test.hs
